<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">沁园网点</string>
    <!-- XListView -->
    <!--<string name="xlistview_header_hint_normal">Enlarge</string>-->
    <!--<string name="xlistview_header_hint_ready">Release</string>-->
    <!--<string name="xlistview_header_hint_loading">Loading...</string>-->
    <!--<string name="xlistview_header_last_time">Last update:</string>-->
    <!--<string name="xlistview_footer_hint_normal">More contents</string>-->
    <!--<string name="xlistview_footer_hint_ready">Release to get more contents</string>-->
    <string name="xlistview_header_hint_normal">下拉</string>
    <string name="xlistview_header_hint_ready">放开</string>
    <string name="xlistview_header_hint_loading">加载中...</string>
    <string name="xlistview_header_last_time">上次更新:</string>
    <string name="xlistview_footer_hint_normal">更多内容</string>
    <string name="xlistview_footer_hint_ready">获取更多内容</string>
    <!-- XListView -->


    <!-- System -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_section">SectionActivity</string>
    <string name="title_activity_around_me">AroundMeActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- System -->


    <!-- alert -->
    <string name="tip">提示</string>
    <string name="quit_app_question">你确定要退出沁园网点吗？</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="network_error">网络错误</string>
    <string name="no_data">没有数据</string>

    <!-- tab -->
    <string name="section">区域网点</string>
    <string name="around_me">附近网点</string>
    <string name="user_info">用户信息</string>

    <!-- login -->
    <string name="input_username_and_password">请输入用户名和密码</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="empty_username">用户名不能为空</string>
    <string name="empty_password">密码不能为空</string>
    <string name="invalid_username_or_password">登入失败，用户名或密码错误</string>
    <string name="login">登    录</string>

    <!-- user info -->
    <string name="info_username">用户名：</string>
    <string name="info_name">姓    名：</string>
    <string name="info_phone1">手    机：</string>
    <string name="info_phone2">座    机：</string>
    <string name="info_category">用户类型：</string>
    <string name="info_logout">登    出</string>
    <string name="type_manage_center">管理中心</string>
    <string name="type_agent">代理店</string>
    <string name="type_shop">网店</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone1">手机：</string>
    <string name="phone2">座机：</string>
    <string name="contact">联系人：</string>
    <string name="address">地址：</string>
    <string name="category1">一级类别：</string>
    <string name="category2">二级类别：</string>
    <string name="remark">备注：</string>
    // test    <string name="info">Info</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>

</resources>
