<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    tools:context="com.yjh.qinyuan.main.section.InfoFragment">


    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/label_contact"
        style="@style/label_text"
        android:text="@string/contact" />

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/contact"
        style="@style/value_text"
        android:layout_toRightOf="@id/label_contact" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/label_contact"
        android:background="@color/divider" />

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/label_phone1"
        style="@style/label_text"
        android:layout_below="@+id/contact"
        android:text="@string/phone1" />

    <ImageView
        android:id="@+id/icon_phone1"
        style="@style/detail_text"
        android:layout_alignParentRight="true"
        android:src="@drawable/btn_phone"
        android:layout_below="@+id/label_contact" />

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/phone1"
        style="@style/value_text"
        android:autoLink="phone"
        android:textColorLink="@color/main"
        android:layout_below="@+id/contact"
        android:layout_marginRight="5dp"
        android:layout_alignParentRight="false"
        android:layout_toLeftOf="@+id/icon_phone1"
        android:layout_toRightOf="@id/label_phone1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/label_phone1"
        android:background="@color/divider" />

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/label_phone2"
        style="@style/label_text"
        android:layout_below="@+id/label_phone1"
        android:text="@string/phone2" />

    <ImageView
        android:id="@+id/icon_phone2"
        style="@style/detail_text"
        android:layout_alignParentRight="true"
        android:src="@drawable/btn_phone"
        android:layout_below="@+id/label_phone1" />

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/phone2"
        style="@style/value_text"
        android:autoLink="phone"
        android:textColorLink="@color/main"
        android:layout_below="@+id/label_phone1"
        android:layout_marginRight="5dp"
        android:layout_alignParentRight="false"
        android:layout_toLeftOf="@+id/icon_phone2"
        android:layout_toRightOf="@id/label_phone1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/label_phone2"
        android:background="@color/divider" />

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/label_address"
        style="@style/label_text"
        android:layout_below="@+id/phone2"
        android:text="@string/address" />

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/address"
        style="@style/value_text"
        android:layout_below="@+id/phone2"
        android:layout_toRightOf="@+id/label_address" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/address"
        android:background="@color/divider" />

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/label_remark"
        style="@style/label_text"
        android:layout_below="@+id/address"
        android:text="@string/remark" />

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/remark"
        style="@style/value_text"
        android:layout_below="@+id/address"
        android:layout_toRightOf="@+id/label_remark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/label_remark"
        android:background="@color/divider" />
</RelativeLayout>
