<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <com.yjh.qinyuan.widget.MyActionBar
        android:id="@+id/action_bar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/simple_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/ic_launcher"
            android:paddingRight="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.yjh.qinyuan.widget.HelveticaTextView
                android:id="@+id/n_name"
                style="@style/detail_text" />

            <com.yjh.qinyuan.widget.HelveticaTextView
                android:id="@+id/label_phone1"
                style="@style/detail_text"
                android:layout_below="@+id/n_name"
                android:text="@string/phone1" />

            <ImageView
                android:id="@+id/icon_phone1"
                style="@style/detail_text"
                android:layout_alignParentRight="true"
                android:src="@drawable/btn_phone"
                android:layout_marginRight="-5dp"
                android:layout_marginTop="-5dp"
                android:layout_below="@+id/n_name" />

            <com.yjh.qinyuan.widget.HelveticaTextView
                android:id="@+id/phone1"
                style="@style/detail_text"
                android:layout_below="@+id/n_name"
                android:layout_toRightOf="@id/label_phone1"
                android:layout_toLeftOf="@+id/icon_phone1"
                android:textColorLink="@color/main"
                android:autoLink="phone" />

            <com.yjh.qinyuan.widget.HelveticaTextView
                android:id="@+id/label_phone2"
                style="@style/detail_text"
                android:layout_below="@+id/label_phone1"
                android:text="@string/phone2" />

            <ImageView
                android:id="@+id/icon_phone2"
                style="@style/detail_text"
                android:layout_alignParentRight="true"
                android:layout_marginRight="-5dp"
                android:src="@drawable/btn_phone"
                android:layout_marginTop="-5dp"
                android:layout_below="@+id/label_phone1" />

            <com.yjh.qinyuan.widget.HelveticaTextView
                android:id="@+id/phone2"
                style="@style/detail_text"
                android:layout_below="@+id/label_phone1"
                android:layout_toRightOf="@id/label_phone1"
                android:layout_toLeftOf="@+id/icon_phone2"
                android:textColorLink="@color/main"
                android:autoLink="phone" />
        </RelativeLayout>
    </LinearLayout>

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/label_contact"
        style="@style/detail_text"
        android:layout_below="@+id/simple_item"
        android:text="@string/contact" />

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/contact"
        style="@style/detail_text"
        android:layout_below="@+id/simple_item"
        android:layout_toRightOf="@id/label_contact" />

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/label_address"
        style="@style/detail_text"
        android:layout_below="@+id/label_contact"
        android:text="@string/address" />

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/address"
        style="@style/detail_text"
        android:layout_below="@+id/label_contact"
        android:layout_toRightOf="@id/label_address" />

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/label_category1"
        style="@style/detail_text"
        android:layout_below="@+id/address"
        android:text="@string/category1" />

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/category1"
        style="@style/grey_detail_text"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/label_address"
        android:layout_toRightOf="@id/label_category1"
        android:gravity="right" />

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/label_category2"
        style="@style/label_text"
        android:layout_below="@+id/label_category1"
        android:text="@string/category2" />

    <com.yjh.qinyuan.widget.HelveticaTextView
        android:id="@+id/category2"
        style="@style/grey_detail_text"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/label_category1"
        android:layout_toRightOf="@id/label_category2"
        android:gravity="right" />

    <com.baidu.mapapi.map.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/label_category2"
        android:layout_marginTop="10dp"></com.baidu.mapapi.map.MapView>
    </RelativeLayout>
</RelativeLayout>